--- a/.github/workflows/signin.yml
+++ b/.github/workflows/signin.yml
@@ -12,8 +12,8 @@ jobs:
     steps:
       - uses: ImYrS/aliyun-auto-signin@main
         with:
-          REFRESH_TOKENS: ${{ secrets.aa2880b521c14d3d8b05c66df10684eb }}
-          GP_TOKEN: ${{ secrets.GP_TOKEN}}
+          REFRESH_TOKENS: ${{ secrets.c5484d464a76493092d72994ae49b1c4 }}
+          GP_TOKEN: ${{ secrets.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}}
           PUSH_TYPES: ''
           DO_NOT_REWARD: 'false'
           PUSHPLUS_TOKEN: ${{ secrets.5144188bf0a241d48d4d6a6889311647 }}
